2000-06-07  Sven Neumann  <sven@gimp.org>

	* app/pixel_region.c: applied patch provided by Daniel Egger:
	store the result of tile_bpp() into a variable and use it
	instead of calling it over and over again in the inner loop.

	* app/pixel_region.h
	* app/pixel_regionP.h:
	Did some additional indentation and code cleanup.
	
2000-06-07  Michael Natterer  <mitch@gimp.org>
            Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/gifload.c: test for GIMP_HAVE_PARASITES

	* plug-ins/common/url.c: open a pipe to the wget child and
	parse it's output so we can display a progressbar.

2000-06-07  Sven Neumann  <sven@gimp.org>

	* Makefile.am: sorry, there's no build directory

	* app/plug_in.c (plug_in_temp_run): uncommented the call to 
	plug_in_pop(). This seems to solve the longstanding problem 
	that made temporary procedures like Script-Fu fail when
	called from plug-ins.

2000-06-06  Seth Burgess <sjburges@gimp.org>

	* plug-ins/imagemap/imap_default_dialog.c
	* plug-ins/imagemap/imap_edit_area_info.c
	* plug-ins/imagemap/imap_default_dialog.h: Applied author's
	(Maurits Rijk  <lpeek.mrijk@consunet.nl>) patches to make apply 
	callback behave properly
	
2000-06-07  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: Add the build subdirectory (which contains a copy
	of the build module).

	* app/gimphelp.c (gimp_help_netscape): Test for help_path being
	non-NULL was wrong way.

	* app/preferences_dialog.c (file_pref_cmd_callback): Change
	"From X Server" to "From windowing system".

	* app/makefile.cygwin: Update according to file name changes.

	* libgimp/gimp.def
	* libgimp/gimpui.def
	* libgimp/makefile.{cygwin,msc}: Update for Mitch's and Sven's
	changes.

	* app/makefile.cygwin
	* libgimp/makefile.cygwin
	* modules/makefile.cygwin
	* plug-ins/makefile.cygwin: Include make.mingw from build/win32,
	simplify accordingly.

	* plug-ins/libgck/gck/gckcolor.c: Include <glib.h> before
	gimpmath.h, so G_PI don't get redefined when glib.h is included
	later.
